// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton> Snapshots and structure should render checked, disabled & id 1`] = `
<div
  className="lumx-radio-button lumx-radio-button--is-checked lumx-radio-button--is-disabled lumx-radio-button--theme-light"
>
  <div
    className="lumx-radio-button__input-wrapper"
  >
    <input
      checked={true}
      className="lumx-radio-button__input-native"
      disabled={true}
      id="inputID"
      onChange={[Function]}
      tabIndex={-1}
      type="radio"
    />
    <div
      className="lumx-radio-button__input-placeholder"
    >
      <div
        className="lumx-radio-button__input-background"
      />
      <div
        className="lumx-radio-button__input-indicator"
      />
    </div>
  </div>
  <div
    className="lumx-radio-button__content"
  />
</div>
`;

exports[`<RadioButton> Snapshots and structure should render defaults 1`] = `
<div
  className="lumx-radio-button lumx-radio-button--is-unchecked lumx-radio-button--theme-light"
>
  <div
    className="lumx-radio-button__input-wrapper"
  >
    <input
      className="lumx-radio-button__input-native"
      id="fixedId"
      onChange={[Function]}
      tabIndex={0}
      type="radio"
    />
    <div
      className="lumx-radio-button__input-placeholder"
    >
      <div
        className="lumx-radio-button__input-background"
      />
      <div
        className="lumx-radio-button__input-indicator"
      />
    </div>
  </div>
  <div
    className="lumx-radio-button__content"
  />
</div>
`;

exports[`<RadioButton> Snapshots and structure should render label & helper 1`] = `
<div
  className="lumx-radio-button lumx-radio-button--is-unchecked lumx-radio-button--theme-light"
>
  <div
    className="lumx-radio-button__input-wrapper"
  >
    <input
      className="lumx-radio-button__input-native"
      id="fixedId"
      onChange={[Function]}
      tabIndex={0}
      type="radio"
    />
    <div
      className="lumx-radio-button__input-placeholder"
    >
      <div
        className="lumx-radio-button__input-background"
      />
      <div
        className="lumx-radio-button__input-indicator"
      />
    </div>
  </div>
  <div
    className="lumx-radio-button__content"
  >
    <InputLabel
      className="lumx-radio-button__label"
      htmlFor="fixedId"
      theme="light"
    >
      Label
    </InputLabel>
    <InputHelper
      className="lumx-radio-button__helper"
      kind="info"
      theme="light"
    >
      Helper
    </InputHelper>
  </div>
</div>
`;
